--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,16 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
+}
+
+.text-me {
+  font-family: Permanent Marker;
 }
 
 .App-title {
@@ -22,7 +21,4 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
